--- a/tv-search/style.css
+++ b/tv-search/style.css
@@ -118,6 +118,11 @@ main {
   font-size: .9em;
 }
 
+
+/* Old code */
+
+
+/* 
 .show-info {
   color: #eee;
   display: flex;
@@ -126,35 +131,28 @@ main {
   padding: 0.5rem 1rem 1rem;
   letter-spacing: 0.5px;
   height: 80%;
-  /* testing */
 }
-
 .show-info h3 {
   margin-top: 0;
 }
-
 .show-info span {
   background-color: var(--primary-color);
   padding: .25rem .5rem;
   border-radius: 3px;
   font-weight: bold;
 }
-
 .show-info span.green {
   color: lightgreen;
 }
-
 .show-info span.orange {
   color: orange;
 }
-
 .show-info span.red {
   color: red;
 }
+*/
 
-.summary {
-  /* margin-top: 20%; */
-  /* testing. Didn't change anything? */
+.show-info {
   background-color: #fff;
   padding: 2rem;
   position: absolute;
@@ -162,12 +160,15 @@ main {
   bottom: 0;
   right: 0;
   max-height: 100%;
+  /* covers all of image */
+  max-height: 75%;
+  /* Only covers most of image */
   transform: translateY(101%);
-  transition: transform .55s ease-in;
+  transition: transform .5s ease-in;
   overflow-y: auto;
 }
 
-.show:hover .summary {
+.show:hover .show-info {
   transform: translateY(0%);
   opacity: 0.96;
 }
