--- a/custom-range-slider/style.css
+++ b/custom-range-slider/style.css
@@ -11,20 +11,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   height: 100vh;
   overflow: hidden;
   margin: 0;
 }
 
 h2 {
-  position: absolute;
-  top: 10px;
+  /* position: absolute;
+  top: 10px; */
 }
 
 h3 {
-  position: absolute;
-  top: 70px;
+  /* position: absolute;
+  top: 70px; */
   width: 85%;
   max-width: 600px;
   color: #3F3F3F;
@@ -32,6 +32,9 @@ h3 {
 
 .range-container {
   position: relative;
+  /* position: absolute; */
+  /* top: 310px; */
+  /* margin-top: 20px; */
   max-width: 100%;
   /* display: flex;
   flex-direction: column-reverse;
