--- a/drawing-app/style.css
+++ b/drawing-app/style.css
@@ -13,15 +13,33 @@
   box-sizing: border-box;
 }
 
+h1 {
+  margin-top: .3em;
+  margin-bottom: .2em;
+}
+
+h2 {
+  margin-top: 0;
+  padding-top: 0;
+  margin-bottom: .3em;
+}
+
+h3 {
+  margin-top: 0;
+  padding-top: 0;
+}
+
 body {
   background-color: #f5f5f5;
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   height: 100vh;
   margin: 0;
+  padding: 2em;
+  /* doesn't seem to do anything */
 }
 
 canvas {
