--- a/drawing-app/style.css
+++ b/drawing-app/style.css
@@ -21,12 +21,20 @@ h1 {
 h2 {
   margin-top: 0;
   padding-top: 0;
-  margin-bottom: .3em;
+  margin-bottom: .2rem;
+  text-align: center;
 }
 
 h3 {
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: .4rem;
+}
+
+h4 {
+  margin-top: 0;
+  padding-top: 0;
+  margin-bottom: .6rem;
 }
 
 body {
