--- a/drawing-app/style.css
+++ b/drawing-app/style.css
@@ -19,8 +19,9 @@ h1 {
 }
 
 h2 {
-  margin-top: 0;
-  padding-top: 0;
+  /* margin-top: 1rem; */
+  /* Doesn't seem to do anything */
+  padding-top: 1rem;
   margin-bottom: .25rem;
   text-align: center;
 }
@@ -46,8 +47,8 @@ body {
   /* justify-content: center; */
   height: 100vh;
   margin: 0;
-  padding: 2em;
-  /* doesn't seem to do anything */
+  padding: 2.5rem;
+  /* doesn't seem to do anything*/
 }
 
 canvas {
