--- a/drawing-app/style.css
+++ b/drawing-app/style.css
@@ -47,7 +47,7 @@ body {
   /* justify-content: center; */
   height: 100vh;
   margin: 0;
-  padding: 2.5rem;
+  /* padding: 2.5rem; */
   /* doesn't seem to do anything*/
 }
 
