--- a/drawing-app/style.css
+++ b/drawing-app/style.css
@@ -14,11 +14,13 @@
 }
 
 h1 {
+  text-align: center;
   margin-top: .3em;
   margin-bottom: .2em;
 }
 
 h2 {
+  text-align: center;
   /* margin-top: 1rem; */
   /* Doesn't seem to do anything */
   padding-top: 1rem;
@@ -27,12 +29,14 @@ h2 {
 }
 
 h3 {
+  text-align: center;
   margin-top: 0;
   padding-top: 0;
   margin-bottom: .4rem;
 }
 
 h4 {
+  text-align: center;
   margin-top: 0;
   padding-top: 0;
   margin-bottom: .6rem;
